add all comment methodes need this app also fix some seller, product methodes etc.